finished week calendar

--- a/Chalkable.Web/assets/jade/activities/calendar/announcement/MonthDayPopUp.jade
+++ b/Chalkable.Web/assets/jade/activities/calendar/announcement/MonthDayPopUp.jade
@@ -22,8 +22,7 @@
                             div
                                 p.item-title=item.getTitle()
                                 p.classname-under=item.getClassName()
-    //A(href="#announcement/add").ann-button.plus-ann
-    +ActionLink('announcement', 'add')
+    +ActionLink('announcement', 'add').ann-button.plus-ann
 
 
 
