--- a/Chalkable.Web/assets/jade/activities/class/TopBar.jade
+++ b/Chalkable.Web/assets/jade/activities/class/TopBar.jade
@@ -1,7 +1,7 @@
 if self.getController()
     params = self.getParams();
-    params = (params && params.length ? params.join('/') + '/' : '');
-    +ActionLink(class=self.isPressed() ? "pressed " : "",href="#"+self.getController()+'/'+self.getAction() + '/' + params + self.getId()).item.class-button.button-link
+    //params = (params && params.length ? params.join('/') + '/' : '');
+    +ActionLink(self.getController(), self.getAction(), params, self.getId())(class=self.isPressed() ? "pressed " : "").item.class-button.button-link
         .img-wrapper
             img(href="http://local.chalkable.com:8080/chalkable/Course/GetIcon?courseInfoId=10")
         SPAN.text-container= self.getName()
