--- a/Chalkable.Web/assets/sass/partials/main/developer/_app_general.scss
+++ b/Chalkable.Web/assets/sass/partials/main/developer/_app_general.scss
@@ -5,6 +5,33 @@ BODY {
           #main-wrapper {
             #main {
               DIV.app-general-info{
+                .app-header{
+                  .app-icon{
+                    display: inline-block;
+                    img{
+                      max-height: 100px;
+                      max-width: 100px;
+                      padding: 0 0 20px 20px;
+
+                    }
+
+                  }
+                  .app-description{
+                    margin-left: 5px;
+                    display: inline-block;
+                    vertical-align: top;
+                    padding: 10px;
+
+                    .title{
+                      color: #51595d;
+                      font-size: 30px;
+                    }
+                    .app-status{
+                      padding-top: 2px;
+                      font-size: 14px;
+                    }
+                  }
+                }
               }
             }
         }
