--- a/Chalkable.Web/assets/sass/partials/main/calendar/_calendar.scss
+++ b/Chalkable.Web/assets/sass/partials/main/calendar/_calendar.scss
@@ -696,7 +696,7 @@ BODY {
     background: none;
     color: #939393;
     text-align: center;
-    padding: 5px;
+    padding: 5px 5px 15px 5px;
     >P.up {
       font-size: 12px;
     }
