--- a/Chalkable.Web/assets/jade/sidebars/TeacherSidebar.jade
+++ b/Chalkable.Web/assets/jade/sidebars/TeacherSidebar.jade
@@ -2,6 +2,7 @@
 #sidebar-controls
     .search-wrapper
         #search-bar
+            +SearchBox(chlk.services.SearchService, "search", chlk.templates.search.SiteSearch)#siteSearch(name="siteSearch")
 
     .wrapper
         +ActionLink('announcement','add').fullwidth-button.add-new
