--- a/Chalkable.Web/assets/jade/activities/messages/AddDialog.jade
+++ b/Chalkable.Web/assets/jade/activities/messages/AddDialog.jade
@@ -6,12 +6,20 @@
             +ActionForm('message', 'send')
                 .x-form-field
                     label To:
-                    +SearchBox("recipientId", "recipientId", "", "")
+                    +SearchBox(chlk.services.PersonService, "getPersons", chlk.templates.messages.RecipientAutoComplete)#recipientId(
+                        name="recipientId",
+                        value=self.sender ? self.sender.getFirstName()+ ' ' + self.sender.getLastName() : ""
+                        default-value=self.sender ? self.sender.getId() : "")
                 .x-form-field
                     label Subject:
-                    input(type="text",name="subject")
+                    input(type="text",name="subject", value=self.subject ? "Re: " + self.subject : "")
                 .x-form-field
                     label Body:
                     input(type="text",name="body")
+
+                if self.body
+                    .x-form-field
+                        label= 'send: ' + self.sent.toString('dd/m/yy hh:min:ss')
+                        input(type="text",name="prev", value=self.body)
                 +Button()(type="submit").special-button.blue-button.submit-btn Submit
                 +Button.special-button.red-button.close Cancel
