--- a/Chalkable.Web/assets/jade/activities/departments/department-dialog.jade
+++ b/Chalkable.Web/assets/jade/activities/departments/department-dialog.jade
@@ -6,7 +6,7 @@
                 +Hidden("id", self.id)
                 .x-form-field
                     label File:
-                    input(type="text",name="iconfile")
+                    +FileUpload()(name='icon')#icon.simple-gray-button
                 .x-form-field
                     label Name:
                     input(type="text",name="name", value=self.name)
