--- a/Chalkable.Web/assets/sass/partials/main/developer/_app.scss
+++ b/Chalkable.Web/assets/sass/partials/main/developer/_app.scss
@@ -108,6 +108,10 @@ BODY {
 
                     &.icons{
                       margin-top: 15px;
+
+                      .icon{
+                        float: left;
+                      }
                     }
 
                     .icons, .screenshots{
