--- a/Chalkable.Web/assets/jade/controls/action-form.jade
+++ b/Chalkable.Web/assets/jade/controls/action-form.jade
@@ -7,4 +7,4 @@ mixin ActionForm(controller, action)
         block
 
 mixin Hidden(hidName, hidValue)
-    input(type="hidden", name=hidName, value=hidValue)
+    input(type="hidden", name=hidName, value=hidValue)(attributes)
