--- a/Chalkable.Web/assets/jade/controls/slide-checkbox.jade
+++ b/Chalkable.Web/assets/jade/controls/slide-checkbox.jade
@@ -1,10 +1,8 @@
 mixin SlideCheckbox(name, val, isReadOnly)
-    -console.log('readonly', isReadOnly)
     .slide-checkbox(attributes)
         .wrapper
-            +Hidden(name, false)
             -attributes.checked = val
-            input(id=name, name = name, type="checkbox")(attributes)
+            +Checkbox(name, val)(attributes)
             if !isReadOnly
                 label(for=name)
             else
